@@ -1,3 +1,8 @@
+2004-11-11  Sven de Marothy  <sven@physto.se>
+
+	* java/awt/geom/GeneralPath.java (evaluateCrossings):
+	Fixed epsilon value, should always be nonzero.
+
 2004-11-11  Paul Jenner  <psj.home@ntlworld.com>
 
 	* java/awt/image/Raster.java
